Fix margin to avoid blocks not off-centre

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -81,7 +81,7 @@ h2 {
   padding: 10px;
   border: 2px solid #333;
   background-color: beige;
-  margin: 10px;
+  margin-top: 20px;
 }
 
 .frequencies-list {
